    Thanks to Petter Reinholdtsen <pere@debian.org> for report and patch.
    (closes: #458944)
  * Add support for a noauto option to cryptdisks. Thanks to U Kuehn
    <ukuehn@acm.org> for the idea.
  * Add typo fixes by Justin Pryzby <jpryzby+d@quoininc.com> to crypttab.5 and
    cryptsetup.8. New dpatch 02_manpage.dpatch. (closes: #460994)

 -- Jonas Meurer <mejo@debian.org>  Sun, 20 Jan 2008 16:10:51 +0100

cryptsetup (2:1.0.6~pre1-1) unstable; urgency=low

  [ Jonas Meurer ]
  * New upstream alpha release 1.0.6~pre1:
    - [01_crypt_luksFormat_libcryptsetup.dpatch] removed, applied upstream
    - [02_manpage.dpatch] likewise
    - [04_fix_unused_or_unitialized_variables.dpatch] likewise
    - [05_segfault_at_nonexisting_device.dpatch] likewise
    - [06_run_udevsettle.dpatch] update for new upstream
  * Disable 03_check_for_root.dpatch. As Ludwig Nussel mentioned on
    dm-crypt@saout.de, cryptsetup 1.0.5 already prints out meaningfull errors
    if expected permissions are not available. Therefore the check for uid ==
    0 is superfluous.
  * [06_run_udevsettle.dpatch] Run udevsettle after device-mapper device
    creation. Fixes issues with temporary device files in /dev/mapper. Patch
    by Reinhard Tartler from Ubuntu. (closes: #444914)
  * Add support for offset and skip options to cryptdisks/crypttab. Thanks to
    Marc-Jano Knopp. (closes: #446674)
  * Update the long description in debian/control. Don't mention kernel 2.6.4
    any longer, remove references to /usr/share/doc/cryptsetup/CryptoRoot.HowTo
    and mkinitrd.
  * Add noearly option to cryptdisks/crypttab, which causes cryptdisks-early
    to ignore the entry. Thanks to Joerg Jaspert (closes: #423102)
  * Change log_progress_msg "$dst (started)" to device_msg "$dst" "started" in
    cryptdisks.functions. Makes console output of cryptdisks more consistent.
  * Add cryptdisks_start and patch to cryptdisks.functions by Jon Dowland.