@@ -61,12 +61,16 @@ build-stamp: config.status
 	dh_testdir
 	asciidoc -d manpage -b docbook debian/crypttab.5.txt
 	asciidoc -d manpage -b docbook debian/cryptdisks_start.8.txt
+	asciidoc -d manpage -b docbook debian/cryptdisks_stop.8.txt
 	sed -i 's/<emphasis role="strong">/<emphasis role="bold">/g' debian/crypttab.5.xml
 	sed -i 's/<emphasis role="strong">/<emphasis role="bold">/g' debian/cryptdisks_start.8.xml
+	sed -i 's/<emphasis role="strong">/<emphasis role="bold">/g' debian/cryptdisks_stop.8.xml
 	xsltproc -o debian/crypttab.5 /usr/share/xml/docbook/stylesheet/nwalsh/manpages/docbook.xsl \
 		debian/crypttab.5.xml
 	xsltproc -o debian/cryptdisks_start.8 /usr/share/xml/docbook/stylesheet/nwalsh/manpages/docbook.xsl \
 		debian/cryptdisks_start.8.xml
+	xsltproc -o debian/cryptdisks_stop.8 /usr/share/xml/docbook/stylesheet/nwalsh/manpages/docbook.xsl \
+		debian/cryptdisks_stop.8.xml
 	pod2man --section=8 --center="Administrative commands" --release="" debian/scripts/luksformat \
 		debian/luksformat.8
 	$(MAKE)
@@ -87,6 +91,7 @@ clean-patched:
 
 	rm -f debian/crypttab.5 debian/crypttab.5.xml debian/luksformat.8
 	rm -f debian/cryptdisks_start.8 debian/cryptdisks_start.8.xml
+	rm -f debian/cryptdisks_stop.8 debian/cryptdisks_stop.8.xml
 	rm -f config.mess
 	rm -rf autom4te.cache 
 	rm -f src/cryptsetup.static
@@ -107,6 +112,7 @@ install: build
 	install -m 0755 debian/checks/* $(CURDIR)/debian/cryptsetup/lib/cryptsetup/checks/
 	install -m 0755 debian/scripts/luksformat $(CURDIR)/debian/cryptsetup/usr/sbin/
 	install -m 0755 debian/scripts/cryptdisks_start $(CURDIR)/debian/cryptsetup/usr/sbin/
+	install -m 0755 debian/scripts/cryptdisks_stop $(CURDIR)/debian/cryptsetup/usr/sbin/
 	install -m 0755 debian/scripts/decrypt_* $(CURDIR)/debian/cryptsetup/lib/cryptsetup/scripts/
 	install -m 0755 debian/initramfs/cryptroot-hook \
 		$(CURDIR)/debian/cryptsetup/usr/share/initramfs-tools/hooks/cryptroot
@@ -145,7 +151,7 @@ binary-arch: build install
 	rm -rf $(CURDIR)/debian/cryptsetup/usr/lib
 
 #	dh_install
-	dh_installman debian/crypttab.5 debian/luksformat.8 debian/cryptdisks_start.8
+	dh_installman debian/crypttab.5 debian/luksformat.8 debian/cryptdisks_start.8 debian/cryptdisks_stop.8
 	dh_link -a
 	dh_strip -a
 	dh_compress -a
