@@ -24,7 +24,7 @@ fi
 
 egrep -v "^[[:space:]]*(#|$)" "$TABFILE" | while read dst src key opts; do
 	if [ "$1" == "$dst" ]; then
-		handle_crypttab_line "$dst" "$src" "$key" "$opts"
+		handle_crypttab_line_start "$dst" "$src" "$key" "$opts"
 		exit 0
 	fi
 done
